chore(deps): Update dependencies